Fixed overlapping footer with padding-bottom; updated about and resume to use the new navigation and footer structure

--- a/src/scss/sections/_about-panel.scss
+++ b/src/scss/sections/_about-panel.scss
@@ -13,24 +13,12 @@
 
   img {
     width: 45%;
-    max-width: 345px;
+    max-width: 400px;
   }
 
   h2 {
     width: 50%;
     padding-left: 30px;
-  }
-
-  @media(max-width: 1110px) {
-    img {
-      min-width: 290px;
-    }
-
-    h2 {
-      width: calc(50% - 40px);
-      font-size: 1.2857rem;
-      line-height: 22px;
-    }
   }
 
   @media(max-width: 930px) {
@@ -44,6 +32,8 @@
       width: 100%;
       padding-top: 15px;
       padding-left: 0;
+      font-size: 1.2857rem;
+      line-height: 22px;
     }
   }
 }
