--- a/src/scss/sections/_content-panel.scss
+++ b/src/scss/sections/_content-panel.scss
@@ -1,12 +1,3 @@
-.content-panel {
-  float: right;
-  width: calc(100% - 350px);
-  height: calc(100% - 60px);
-  padding: 0 30px;
-  margin: 30px 0;
-  overflow: overlay;
-}
-
 .page-loader {
   position: absolute;
   top: 0;
