--- a/src/scss/sections/_resume-panel.scss
+++ b/src/scss/sections/_resume-panel.scss
@@ -1,10 +1,7 @@
 .resume-panel {
-  float: left;
-  width: calc(100% - 352px);
-  height: calc(100% - 60px);
+  width: 100%;
   max-width: 798px;
-  margin: 30px;
-  overflow: overlay;
+  margin: 0 auto;
   background-color: $white;
   border: 1px solid $paper-white;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 0 5px rgba(128, 128, 128, 0.1) inset;
